[tool.poetry]
name = "blockfunscripter"
version = "0.0.2"
description = ""
authors = ["Hdnsk <hdnsk0000@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
PyQt5 = "^5.15.4"
matplotlib = "^3.4.2"
PySide6 = "^6.1.0"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[tool.poetry.scripts]
bfs-cli = "blockfunscripter.cli:main"
blockfunscripter = "blockfunscripter.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
